[gd_scene load_steps=4 format=3 uid="uid://bp2og3uyjdklg"]

[ext_resource type="Script" path="res://Scripts/Node.gd" id="1_tu833"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cgryt"]
load_path = "res://.godot/imported/default_state.png-8aa5d4bd5a4b7bb87ba4f58507707011.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sboq0"]
size = Vector2(3.03133, 3.22293)

[node name="Node" type="Sprite2D"]
scale = Vector2(1.31258, 1.31258)
texture = SubResource("CompressedTexture2D_cgryt")
script = ExtResource("1_tu833")

[node name="Distance" type="RichTextLabel" parent="."]
offset_left = -13.2
offset_top = -37.2
offset_right = 120.8
offset_bottom = -8.20001
text = "
"

[node name="Id" type="RichTextLabel" parent="."]
offset_left = -15.6
offset_top = -5.99998
offset_right = 118.4
offset_bottom = 23.0
scale = Vector2(0.517211, 0.517211)

[node name="Mesh Signal" type="Area2D" parent="."]

[node name="Node Box" type="Area2D" parent="."]
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node Box"]
scale = Vector2(11.876, -11.1699)
shape = SubResource("RectangleShape2D_sboq0")

[connection signal="area_entered" from="Node Box" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Node Box" to="." method="_on_area_2d_area_exited"]
